--- a/requirements.txt
+++ b/requirements.txt
@@ -1,122 +1,106 @@
+antlr4-python3-runtime==4.9.3
+asttokens==2.4.0
+attrs==23.1.0
+backcall==0.2.0
 blinker==1.6.3
+certifi==2023.7.22
+cffi==1.15.1
+charset-normalizer==3.2.0
 click==8.1.7
+config==0.5.1
+contourpy==1.1.1
+cowsay==6.1
+cryptography==41.0.4
+cycler==0.11.0
+datumaro==1.2.1
+decorator==5.1.1
+defusedxml==0.7.1
+dill==0.3.7
+dlib==19.24.2
 docopt==0.6.2
+executing==1.2.0
+filelock==3.12.4
 Flask==3.0.0
+fonttools==4.42.1
+fsspec==2023.9.2
+geti-sdk==1.5.8
+grpcio==1.58.0
+h5py==3.9.0
+huggingface-hub==0.16.4
+idna==3.4
+imagesize==1.4.1
+importlib-metadata==6.8.0
+importlib-resources==6.1.0
 imutils==0.5.4
+ipython==8.12.2
 itsdangerous==2.1.2
+jedi==0.19.0
 Jinja2==3.1.2
+joblib==1.3.2
+kiwisolver==1.4.5
+lxml==4.9.3
 MarkupSafe==2.1.3
+matplotlib==3.7.3
+matplotlib-inline==0.1.6
 mqtt-client==1.6.1
-numpy==1.24.4
-opencv-python==4.8.1.78
+networkx==2.8
+nibabel==5.1.0
+numpy==1.22.4
+omegaconf==2.3.0
+opencv-python==4.5.5.64
+openmodelzoo-modelapi==2022.3.0
+openvino==2022.3.0
+openvino-telemetry==2023.1.1
+orjson==3.8.8
+otx==1.2.4
+ovmsclient==2023.1
+packaging==23.1
 paho-mqtt==1.6.1
+pandas==2.0.3
+parso==0.8.3
+pathvalidate==3.2.0
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.5.0
+pip==23.3
+prompt-toolkit==3.0.39
+protobuf==4.24.3
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyarrow==13.0.0
+pycocotools==2.0.7
+pycparser==2.21
+pyemd==1.0.0
+Pygments==2.16.1
+pymongo==3.12.0
+pyparsing==3.1.1
+python-dateutil==2.8.2
+python-dotenv==1.0.0
 pytz==2023.3.post1
+PyYAML==6.0.1
 pyzmq==25.1.1
+requests==2.31.0
+ruamel.yaml==0.17.32
+ruamel.yaml.clib==0.2.7
+scikit-learn==0.24.2
+scipy==1.8.1
+setuptools==68.0.0
+Shapely==1.8.0
+simplejson==3.19.1
+six==1.16.0
+stack-data==0.6.2
+tensorboardX==2.6.2.2
 terminaltables==3.1.10
+threadpoolctl==3.2.0
+tokenizers==0.14.0
+tqdm==4.65.2
+traitlets==5.10.0
+typing_extensions==4.8.0
+tzdata==2023.3
+urllib3==2.0.5
+utils==1.0.1
+wcwidth==0.2.6
 Werkzeug==3.0.0
+wheel==0.41.2
+zipp==3.17.0
 zmq==0.0.0
-# --------------- Konfigurasi Geti ----------------
-# antlr4-python3-runtime==4.9.3
-# asttokens==2.4.0
-# attrs==23.1.0
-# backcall==0.2.0
-# blinker==1.6.3
-# certifi==2023.7.22
-# cffi==1.15.1
-# charset-normalizer==3.2.0
-# click==8.1.7
-# contourpy==1.1.1
-# cryptography==41.0.4
-# cycler==0.11.0
-# datumaro==1.2.1
-# decorator==5.1.1
-# defusedxml==0.7.1
-# dill==0.3.7
-# dlib==19.24.2
-# docopt==0.6.2
-# executing==1.2.0
-# filelock==3.12.4
-# Flask==3.0.0
-# fonttools==4.42.1
-# fsspec==2023.9.2
-# geti-sdk==1.5.8
-# grpcio==1.58.0
-# h5py==3.9.0
-# huggingface-hub==0.16.4
-# idna==3.4
-# imagesize==1.4.1
-# importlib-metadata==6.8.0
-# importlib-resources==6.1.0
-# imutils==0.5.4
-# ipython==8.12.2
-# itsdangerous==2.1.2
-# jedi==0.19.0
-# Jinja2==3.1.2
-# joblib==1.3.2
-# kiwisolver==1.4.5
-# lxml==4.9.3
-# MarkupSafe==2.1.3
-# matplotlib==3.7.3
-# matplotlib-inline==0.1.6
-# mqtt-client==1.6.1
-# networkx==2.8
-# nibabel==5.1.0
-# numpy==1.22.4
-# omegaconf==2.3.0
-# opencv-python==4.5.5.64
-# openmodelzoo-modelapi==2022.3.0
-# openvino==2022.3.0
-# openvino-telemetry==2023.1.1
-# orjson==3.8.8
-# otx==1.2.4
-# ovmsclient==2023.1
-# packaging==23.1
-# paho-mqtt==1.6.1
-# pandas==2.0.3
-# parso==0.8.3
-# pathvalidate==3.2.0
-# pexpect==4.8.0
-# pickleshare==0.7.5
-# Pillow==9.5.0
-# pip==23.3
-# prompt-toolkit==3.0.39
-# protobuf==4.24.3
-# ptyprocess==0.7.0
-# pure-eval==0.2.2
-# pyarrow==13.0.0
-# pycocotools==2.0.7
-# pycparser==2.21
-# pyemd==1.0.0
-# Pygments==2.16.1
-# pymongo==3.12.0
-# pyparsing==3.1.1
-# python-dateutil==2.8.2
-# python-dotenv==1.0.0
-# pytz==2023.3.post1
-# PyYAML==6.0.1
-# pyzmq==25.1.1
-# requests==2.31.0
-# ruamel.yaml==0.17.32
-# ruamel.yaml.clib==0.2.7
-# scikit-learn==0.24.2
-# scipy==1.8.1
-# setuptools==68.0.0
-# Shapely==1.8.0
-# simplejson==3.19.1
-# six==1.16.0
-# stack-data==0.6.2
-# tensorboardX==2.6.2.2
-# terminaltables==3.1.10
-# threadpoolctl==3.2.0
-# tokenizers==0.14.0
-# tqdm==4.65.2
-# traitlets==5.10.0
-# typing_extensions==4.8.0
-# tzdata==2023.3
-# urllib3==2.0.5
-# utils==1.0.1
-# wcwidth==0.2.6
-# Werkzeug==3.0.0
-# wheel==0.41.2
-# zipp==3.17.0
-# zmq==0.0.0
